feat(simulator): 强化面板

--- a/simulator/app/assets/index.scss
+++ b/simulator/app/assets/index.scss
@@ -30,6 +30,8 @@
     --p-inputnumber-button-width: 2rem;
     --p-list-option-padding: 0.25rem 0.5rem;
     --p-select-dropdown-width: 2rem;
+    --p-tabs-tab-padding: 0.5rem 1.125rem;
+    --p-tabs-tabpanel-padding: 1rem;
 }
 
 .p-select-label {
