feat(simulator): 科技页

--- a/simulator/app/assets/index.scss
+++ b/simulator/app/assets/index.scss
@@ -18,10 +18,12 @@
     }
 
     a {
+        text-decoration: none;
+        color: inherit;
         cursor: pointer;
     }
 
-    ul {
+    menu, ol, ul {
         list-style: none;
     }
 }
