feat(simulator): 相对视口固定舰船面板

--- a/simulator/app/assets/index.scss
+++ b/simulator/app/assets/index.scss
@@ -12,6 +12,7 @@
     }
 
     body {
+        overflow-x: auto;
         font-size: 14px;
         -webkit-font-smoothing: antialiased;
         text-size-adjust: 100%;
