feat(simulator): 宽屏下在侧边显示导航栏

--- a/simulator/app/assets/index.scss
+++ b/simulator/app/assets/index.scss
@@ -24,6 +24,10 @@
         cursor: pointer;
     }
 
+    button {
+        background-color: initial;
+    }
+
     menu, ol, ul {
         list-style: none;
     }
