feat(simulator): 指挥喵页

--- a/simulator/app/assets/index.scss
+++ b/simulator/app/assets/index.scss
@@ -11,6 +11,10 @@
         background-size: cover;
     }
 
+    html {
+        scroll-behavior: smooth;
+    }
+
     body {
         overflow-x: auto;
         font-size: 14px;
@@ -26,6 +30,12 @@
 
     button {
         background-color: initial;
+        cursor: pointer;
+    }
+
+    mark {
+        background-color: transparent;
+        color: var(--p-primary-color);
     }
 
     menu, ol, ul {
