perf(simulator): 使用分页缓解全量渲染舰级列表的性能问题

--- a/simulator/app/assets/index.scss
+++ b/simulator/app/assets/index.scss
@@ -53,6 +53,10 @@
     --p-tabs-tabpanel-padding: 1rem;
 }
 
+.p-datatable-table-container {
+    scrollbar-gutter: stable;
+}
+
 .p-select-label {
     --uno: "pr-0 text-truncate";
 }
